# scholar-seeker-ai

./: .gitignore  ASSIST.md  LICENSE  README.md  endorsers_report.json  env.example  pyproject.toml  requirements.txt
.cursor/rules/: rules.mdc
scripts/: BROWSER_AUTOMATION.md  arxiv_auth_manager.py  arxiv_endorsement_browser.py  debug_page.py  fetch_papers.py  run_endorser_search.py  status.py
